--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=vendas-api
+spring.datasource.url=jdbc:postgresql://localhost:5832/vendas
+spring.datasource.username=postgres
+spring.datasource.password=teste
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
